--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agrinho 2025/Geovana</title>
-</head>
 <body>
     <header class="cabecalho container">
-div class
-    </header>
-</body>
-</html>
+       <img src="img/logo.png" alt="logo do campo"clss="cabecalho_logo"> title="imagem do pixabay"
+sobre o campo">
+    <!--<div class="logo">MinhaLogo</div>-->
+   <nav class="menu">
+    <ul>
+     <li><a href="#">Início</a></li>
+     <li><a href="#">Sobre</a></li>
+     <li><a href="#">Serviços</a></li>
+     <li><a href="#">Contato</a></li>
+    </ul>
+   </nav>
+</header>
+
+
+<main>
+  <section
