--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@ sobre o campo">
      <li><a href="#">Sobre</a></li>
      <li><a href="#">Serviços</a></li>
      <li><a href="#">Contato</a></li>
-    </ul>
+    ul>
    </nav>
 </header>
 
 
 <main>
-  <section
+  <section class="principal container">
+    <h1 class="principal_titulo">Agrinho 2025</h1>
+    <p class="principal_texto">Festejando a Conexão Campo Cidade</p>
+    <a href="#"class="principal_botao">Venha se conectar</a>
+  </section>
+ </main>
+</body>
+    
+
